# float

./: .gitignore  CMakeLists.txt  README.md  sfloat.c  sfloat.h  test.c  test_binary.c  test_convert.c
src/: CMakeLists.txt  even.c  main.c  sfloat.c  sfloat.h
test/: CMakeLists.txt  test.c  test_binary.c  test_convert.c  test_float32.c
