include_directories (${TEST_SOURCE_DIR}/src)
add_definitions (-DBOOST_TEST_DYN_LINK)
add_executable (Test test.c)
add_executable (TestBinary test_binary.c)
add_executable (TestConvert test_convert.c)
target_link_libraries (Test sfloat)
target_link_libraries (TestBinary sfloat)
target_link_libraries (TestConvert sfloat)
add_test (NAME TestParse COMMAND Test)
add_test (NAME TestBinary COMMAND TestBinary)
add_test (NAME TestConvert COMMAND TestConvert)
